seperated files and created basic life cycle for monaco editor

--- a/components/monaco/qml/tech/strata/monaco/qml.qrc
+++ b/components/monaco/qml/tech/strata/monaco/qml.qrc
@@ -47,5 +47,10 @@
         <file>minified/monaco.d.ts</file>
         <file>minified/qtQuick.js</file>
         <file>minified/qtQuickTypes.js</file>
+        <file>minified/components/helper.js</file>
+        <file>minified/components/ids.js</file>
+        <file>minified/components/properties.js</file>
+        <file>minified/components/search.js</file>
+        <file>qml.qrc</file>
     </qresource>
 </RCC>
