added SGIcon to the Widgets Gallery

--- a/apps/WidgetGallery/qml.qrc
+++ b/apps/WidgetGallery/qml.qrc
@@ -27,5 +27,6 @@
         <file>widgets1_0/ExSGSpinBox.qml</file>
         <file>widgets1_0/ExSGAbstractContextMenu.qml</file>
         <file>widgets1_0/ExSGContextMenuEditActions.qml</file>
+        <file>widgets1_0/ExSGIcon.qml</file>
     </qresource>
 </RCC>
