--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -43,5 +43,8 @@
         <file alias="PlatformInterfaceGenerator/PayloadPropertyDelegate.qml">partial-views/control-view-creator/PlatformInterfaceGenerator/PayloadPropertyDelegate.qml</file>
         <file alias="PlatformInterfaceGenerator/TypeSelectorComboBox.qml">partial-views/control-view-creator/PlatformInterfaceGenerator/TypeSelectorComboBox.qml</file>
         <file alias="components/SGConsoleLogNavigationIcon.qml">partial-views/control-view-creator/components/SGConsoleLogNavigationIcon.qml</file>
+        <file alias="components/SGControlViewCreatorSettingsPopup.qml">partial-views/control-view-creator/components/SGControlViewCreatorSettingsPopup.qml</file>
+        <file alias="components/SGControlViewCheckbox.qml">partial-views/control-view-creator/components/SGControlViewCheckbox.qml</file>
+        <file alias="components/SGControlViewCreatorPopup.qml">partial-views/control-view-creator/components/SGControlViewCreatorPopup.qml</file>
     </qresource>
 </RCC>
