--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -27,6 +27,7 @@
         <file alias="Console/ConsoleLogger.qml">partial-views/control-view-creator/Console/ConsoleLogger.qml</file>
         <file alias="Console/ConsoleContainer.qml">partial-views/control-view-creator/Console/ConsoleContainer.qml</file>
         <file alias="Console/ViewConsoleContainer.qml">partial-views/control-view-creator/Console/ViewConsoleContainer.qml</file>
+	<file alias="Console/Child.qml">partial-views/control-view-creator/Console/Child.qml</file>
         <file alias="components/SGControlViewButton.qml">partial-views/control-view-creator/components/SGControlViewButton.qml</file>
         <file alias="Console/ConsoleMessages/ConsoleMessage.qml">partial-views/control-view-creator/Console/ConsoleMessages/ConsoleMessage.qml</file>
         <file alias="Console/ConsoleMessages/ConsoleTime.qml">partial-views/control-view-creator/Console/ConsoleMessages/ConsoleTime.qml</file>
