--- a/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
+++ b/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
@@ -3,6 +3,7 @@
         <file>arrow-list-bottom.svg</file>
         <file>ban.svg</file>
         <file>bluetooth.svg</file>
+        <file>bluetooth-b.svg</file>
         <file>bolt.svg</file>
         <file>bookmark-blank.svg</file>
         <file>bookmark.svg</file>
@@ -34,6 +35,7 @@
         <file>save.svg</file>
         <file>sign-in.svg</file>
         <file>sign-out.svg</file>
+        <file>signal.svg</file>
         <file>status-light-off.svg</file>
         <file>status-light-transparent.svg</file>
         <file>strata-logo.svg</file>
