Visual Editor Template: Added PlatformInterface and reworked layout to remove loader
- Added PlatformInterface file so this template is more complete if someone wants to use it as the basis for a control view
- Removed loader as it probably causes more confusion than improves performance in most cases

--- a/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -25,5 +25,7 @@
         <file>template-views/visual-editor/qml.qrc</file>
         <file>template-views/visual-editor/Warning.qml</file>
         <file>template-views/images/visual-editor.jpg</file>
+        <file>template-views/visual-editor/PlatformInterface.qml</file>
+        <file>template-views/visual-editor/platformInterface.json</file>
     </qresource>
 </RCC>
