--- a/apps/DeveloperStudio/partial-views/control-view-creator/template-views/visual-editor/qml.qrc
+++ b/apps/DeveloperStudio/partial-views/control-view-creator/template-views/visual-editor/qml.qrc
@@ -4,5 +4,6 @@
         <file>Warning.qml</file>
         <file>Example.qml</file>
         <file>BlankSandbox.qml</file>
+        <file>PlatformInterface.qml</file>
     </qresource>
 </RCC>
