--- a/apps/WidgetGallery/qml.qrc
+++ b/apps/WidgetGallery/qml.qrc
@@ -29,5 +29,7 @@
         <file>widgets1_0/ExSGContextMenuEditActions.qml</file>
         <file>widgets1_0/ExSGIcon.qml</file>
         <file>widgets1_0/ExSGTag.qml</file>
+        <file>commoncpp1_0/PageSGCommonCppOneZero.qml</file>
+        <file>commoncpp1_0/ExSGTextHighlighter.qml</file>
     </qresource>
 </RCC>
